<?xml version="1.0" encoding="utf-8"?>



<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

  <!-- The package of the application flavor, for use within preferences, etc. -->
  <string name="app_package_name" translatable="false">com.mephi2AF.android.apps.authenticator</string>

  <!-- Name of the application -->

    <!-- Shortened version of the application name, without Google branding -->
  <string name="app_name_short">Authenticator</string>

  <!-- Title displayed at the top when adding new OTP account manually -->
  <string name="enter_key_title">Manual account entry</string>

  <!-- Button on the Manual Account Entry page to add the account the details of which the user
       is entering on the page. -->
  <string name="enter_key_page_add_button">Add</string>

  <!-- Label for a button on the main screen: add a new OTP account -->
  <string name="button_add_account">Add an account</string>


  <!-- Label for menu option: add a new OTP account -->
  <string name="add_account_menu_item">Add account</string>


  <!-- Title of the main (top-level) preference/settings screen. -->
  <string name="main_preference_screen_title">Settings</string>

  <!-- Title of the preference in the main preference screen that displays the About settings screen. -->
  <string name="about_preference_title">About</string>

  <!-- Application settings menu item in the main screen's menu. -->
  <string name="settings_menu_item">Settings</string>

  <!-- Button on the Add Other Account screen that lets the user add an account by manually entering
       account details. -->
  <string name="button_add_account_manual_entry">Manually add account</string>

  <!-- Text of the button to advance to the Next page of a wizard.
       [CHAR LIMIT=12] -->
  <string name="button_next">Next</string>

  <!-- Text of the button to return to the previous page of a wizard [CHAR LIMIT=12] -->
  <string name="button_back">Back</string>

  <!-- Form field to enter account name (part of the form used for manually adding account) -->
  <string name="enter_account_label">Enter account name</string>

  <!-- Example displayed in the secret key field before user starts typing there -->
  <string name="enter_key_hint">Enter your key</string>

  <!-- Error message displayed if user enters a key that is shorter than allowed minimum -->
  <string name="enter_key_too_short">Key value is too short</string>

  <!-- Error message displayed if user enters a key with an illegal character -->
  <string name="enter_key_illegal_char">Key value has illegal character</string>

  <!-- Title for the error message dialog displayed after scanning invalid QR code -->
  <string name="error_title">Error</string>

  <!-- Error message displayed when scanned QR code is not recognized as valid format -->
  <string name="error_uri">Key not recognized.</string>

  <!-- Alternative message displayed when scanned QR code is not recognized as valid key -->
  <string name="error_qr">Cannot interpret QR code.</string>

  <!-- Confirmation message displayed in a toast after adding new account -->
  <string name="secret_saved">Secret saved</string>

  <!-- Question asking user to confirm adding a new account, the details of which were obtained
       by scanning a QR code or provided by the web browser. -->
  <string name="save_key_message">Save key for</string>

  <!-- Error message displayed if the scanned QR code contains an empty key -->
  <string name="error_empty_secret">Cannot save empty secret</string>

  <!-- Instruction message displayed on the main screen -->
  <string name="enter_pin">
    Enter this verification code if prompted during account sign-in:
  </string>

  <!-- Label displayed before the integrity check, used to verify key was entered correctly -->
  <string name="check_code_title">Integrity check value</string>

  <!-- Menu item user selects to view the key integrity check for a particular account -->
  <string name="check_code_menu_item">Check key value</string>

  <!-- Title for error message dialog when user attempts to scan a barcode but does not
       have the barcode scanner application installed. -->
  <string name="install_dialog_title">Install barcode scanner?</string>

  <!-- Error message displayed when user attempts to scan a barcode without a scanner app. -->
  <string name="install_dialog_message">
    To scan barcodes containing keys, you must install the ZXing barcode scanner.
   </string>

  <!-- Text on button user clicks to start installation of barcode scanning app -->
  <string name="install_button">Install</string>

  <!-- Preference screen title that displays information about the application. -->
  <string name="about_preference_screen_title">About</string>

  <!-- Preference title for displaying the version of this app -->
  <string name="version_preference_title">Version</string>

  <!-- Preference title, used to get more information about the open-source project for this app -->
  <string name="opensource_preference_title">Open-source project</string>

  <!-- DO NOT TRANSLATE. URL of the Open-Source project's page. -->
  <string name="opensource_page_url" translatable="false">https://github.com/google/google-authenticator/</string>

  <!-- Preference title, used to view the terms of service from Google web page -->
  <string name="terms_preference_title">Terms of service</string>

  <!-- DO NOT TRANSLATE. URL of the Terms of Service page. -->
  <string name="terms_page_url" translatable="false">http://m.google.com/tospage</string>

  <!-- Preference title, used to view the privacy policy from Google web page -->
  <string name="privacy_preference_title">Privacy policy</string>

  <!-- DO NOT TRANSLATE. URL of the Privacy Policy page. -->
  <string name="privacy_page_url" translatable="false">http://www.google.com/policies/privacy/</string>

  <!-- Information displayed on the check-key screen, explaining use of the integrity check -->
  <string name="check_code">
  To check that you have the correct key value for <xliff:g id="account" example="mallory@gmail.com">%1$s</xliff:g>
  verify that the value here matches the integrity check value provided
  by the server:&lt;br/>
  </string>

  <!-- Error message displayed on check-integrity code page,
       if there is an error computing the integrity code for the key. -->
  <string name="general_security_exception">General security exception</string>

  <!-- Error message displayed on check-integrity code page, if key is corrupted. -->
  <string name="decoding_exception">Decoding exception</string>

  <!-- Button on manual account entry page, adds the account -->
  <string name="submit">Save</string>

  <!-- Button on manual account entry page, cancels adding account, returns to main page -->
  <string name="cancel">Cancel</string>

  <!-- Menu item when long-pressing on account, used to remove the account -->
  <string name="context_menu_remove_account">Remove</string>

  <!-- Remove/Delete button in the dialog displayed when the user attempts to remove an account.
       -->
  <string name="remove_account_dialog_button_remove">Remove account</string>

  <!-- Title of the dialog displayed when the user attempts to remove an account. -->
  <string name="remove_account_dialog_title">
    Remove <xliff:g id="account" example="mallory@gmail.com">%1$s</xliff:g>?
  </string>

  <!-- Text (HTML) of the dialog displayed when the user attempts to delete an account.
       The dialog offers two buttons: Remove (remove_account_dialog_button_remove) and Cancel. -->
  <string name="remove_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-factor authentication. This may prevent you from signing into your
      account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-factor authentication for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>

  <!-- Text (HTML) of the dialog displayed when the user attempts to remove a Google account.
       The text differs slightly from remove_account_dialog_button_remove which is displayed
       for non-Google accounts for which we don't know the exact effects of removing the account.
       The dialog offers two buttons: Remove (remove_account_dialog_button_remove) and Cancel. -->
  <string name="remove_google_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-step verification. This may prevent you from signing into your account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-step verification for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>

  <!-- Long-press menu item for an account, used to rename that account -->
  <string name="rename">Rename</string>

  <!-- Text in dialog shown when user selects "Rename" menu item for a given
       account, with the parameter indicating existing account name -->
  <string name="rename_message">Rename <xliff:g id="account" example="mallory@gmail.com">%1$s</xliff:g></string>

  <!-- Error message displayed when user tries to rename one account to the same
       name as another existing account -->
  <string name="error_exists">Sorry, that name is already in use.</string>

  <!-- Long-press menu item for an account, copies current OTP code for that account
       to the phone clipboard -->
  <string name="copy_to_clipboard">Copy to clipboard</string>

  <!-- Text reported to the accessibility system (e.g., on screen reader)
       when the user selects a counter-based account (from the account list)
       for which no code is currently displayed/generated.
       Pressing on the account row will generate the next verification
       code. -->
  <string name="counter_pin">Get code</string>

  <!-- Placeholder value displayed for OTP before any codes have been generated -->
  <string name="empty_pin">_ _ _ _ _ _</string>

  <!-- Text on OK button for confirmation dialogs -->
  <string name="ok">OK</string>

  <!-- Label for the dropdown menu when adding new account manually.
       Asking user to specify one of the two key types (counter vs. time) -->
  <string name="type_prompt">Type of key</string>


  <string-array name="type">
    <item>Time based</item>
    <item>Counter based</item>
  </string-array>


  <string name="dataimport_import_succeeded_uninstall_dialog_title">Import succeeded</string>

  <!-- Text of the prompt displayed to the user on application startup when data from the
       deprecated/old Authenticator app has been imported into this app and thus the
       deprecated/old app can be uninstalled.
       The dialog offers two buttons: Uninstall (button_uninstall_old_app) and Cancel. -->
  <string name="dataimport_import_succeeded_uninstall_dialog_prompt">Your data has been successfully imported .</string>

  <!-- Text on the button to uninstall the deprecated/old app. Clicking the button displays the
       system UI for uninstalling the deprecated/old app. -->
  <string name="button_uninstall_old_app">Uninstall</string>

  <!-- Title of the "How it works" wizard page which explains that in addition to entering a
       password during sign in a verification code may need to be entered. -->

  <!-- Heading in the main screen of the app when there are no accounts configured (yet). -->
  <string name="welcome_page_title">
    Thousands of online accounts are hijacked every day.
  </string>

  <!-- Subheading in the main screen of the app when there are no accounts configured (yet).  -->
  <string name="welcome_page_details">2-step verification protects your account even if your password is stolen.</string>
  <string name="app_name">Authenticator</string>

</resources>
