<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content" android:paddingTop="4dip"
      android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
      android:orientation="vertical">
      <EditText android:id="@+id/account_name" android:layout_marginTop="5dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:hint="@string/enter_account_label" android:singleLine="true" />
      <EditText android:id="@+id/key_value" android:layout_marginTop="5dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:hint="@string/enter_key_hint"
        android:singleLine="true" android:inputType="textNoSuggestions|textVisiblePassword"/>
      <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:id="@+id/type_choice" android:prompt="@string/type_prompt" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>
