<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:clipToPadding="true">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_height="fill_parent" android:layout_width="fill_parent"
      android:clipToPadding="true">
      <LinearLayout android:id="@+id/content_no_accounts"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp">
        <TextView
          android:text="@string/welcome_page_title"
          android:textStyle="bold"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        />
       <TextView
          android:id="@+id/details"
          android:text="@string/welcome_page_details"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:layout_marginTop="30sp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        />
        <Button android:id="@+id/add_account_button"
          android:text="@string/button_add_account"
          android:layout_marginTop="10sp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
      </LinearLayout>
      <LinearLayout android:id="@+id/content_accounts_present"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">
        <TextView
          android:id="@+id/enter_pin_prompt"
          android:text="@string/enter_pin"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
  <ListView android:id="@+id/user_list"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    style="?attr/accountListWithVerificationCodes"
    />
</LinearLayout>
